welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: type mismatch;
 found   : Int(2)
 required: String
	if (nbBiscuit<=2) {droite()}
                       ^