welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuit = ""
do {
	do  {avance()
	if (estSurBiscuit()) {nbBiscuit=nbBiscuit+1}
	} while (croisement()==false)
	if (nbBiscuit<=2) {droite()}
	else {gauche()}
	
	
	
} while (sortieTrouvee()==false)
